Fix z-index of burger drop

--- a/app/assets/stylesheets/burger_dropdown.scss
+++ b/app/assets/stylesheets/burger_dropdown.scss
@@ -7,7 +7,7 @@ sidebar{
   position: fixed;
   width: 230px;
   top: 51px;
-  z-index: 50;
+  z-index: 10000000;
   #burger-drop{
     box-shadow: 5px 0 20px rgba(100, 100, 100, 0.30);
     box-sizing: border-box;
