--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -16,7 +16,7 @@ button:focus{
 
 header{
   position: fixed;
-  z-index: 10000000;
+  z-index: 10000001;
   width: 100%;
   top: 0;
   .head{
